# DspTool

./: CMakeLists.txt  decode.c  encode.c  math.c
custom-overlay/dsptool/: portfile.cmake  usage  vcpkg.json
dsptool/: dsptool.h  encode.c
include/: dsptool.h
include/DspTool/: dsptool.h
packaging/: CMakeLists.txt  DspToolConfig.cmake
